--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -23,6 +23,42 @@
 
       <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
         <ion-list lines="none">
+
+
+          <ion-row>
+            <ion-col size="6">
+              <ion-item>
+                <ion-col size="4">
+                  <ion-label>ชื่อ - สกุล(อังกฤษ)</ion-label>
+                </ion-col>
+                <ion-input type="text" placeholder="กรุณากรอกข้อมูล" formControlName="room3"
+                  [class.invalid]="isValid('room3')"></ion-input>
+              </ion-item>
+              <ion-item *ngIf="isValid('room3')">
+                <ion-col size="4"></ion-col>
+                <span class="invalid-msg">
+                  กรุณากรอกข้อมูล
+                </span>
+              </ion-item>
+            </ion-col>
+
+            <ion-col size="6">
+              <ion-item>
+                <ion-col size="4">
+                  <ion-label>ชื่อ - สกุล(ไทย</ion-label>
+                </ion-col>
+                <ion-input type="text" placeholder="กรุณากรอกข้อมูล" formControlName="room4"
+                  [class.invalid]="isValid('room4')"></ion-input>
+              </ion-item>
+              <ion-item *ngIf="isValid('room4')">
+                <ion-col size="4"></ion-col>
+                <span class="invalid-msg">
+                  กรุณากรอกข้อมูล
+                </span>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
           <ion-item>
             <ion-col size="2">
               <ion-label>Input1</ion-label>
@@ -53,19 +89,7 @@
 
           <app-datetime [FormItem]="fg.get('date_time')"></app-datetime>
 
-          <ion-item>
-            <ion-col size="2">
-              <ion-label>inputUnrequire</ion-label>
-            </ion-col>
-            <ion-input type="text" formControlName="input3" placeholder="กรุณากรอกข้อมูล"
-              [class.invalid]="isValid('input3')"></ion-input>
-          </ion-item>
-          <ion-item *ngIf="isValid('input3')">
-            <ion-col size="2"></ion-col>
-            <span class="invalid-msg">
-              กรุณากรอกข้อมูล
-            </span>
-          </ion-item>
+
           <ion-item>
             <ion-col size="2">
               <ion-label>เลือกชั้น</ion-label>
@@ -84,11 +108,26 @@
               กรุณาเลือก
             </span>
           </ion-item>
+
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>inputUnrequire</ion-label>
+            </ion-col>
+            <ion-input type="text" formControlName="input3" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('input3')"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="isValid('input3')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
           <ion-item>
             <ion-col size="2">
               <ion-label>หมายเหตุ</ion-label>
             </ion-col>
-            <ion-textarea placeholder="รายละเอียดเพิ่มเติม" formControlName="detail" clearOnEdit="true"></ion-textarea>
+            <ion-input type="text" placeholder="รายละเอียดเพิ่มเติม" formControlName="detail" clearOnEdit="true">
+            </ion-input>
           </ion-item>
 
 
@@ -117,52 +156,53 @@
             </ion-item>
           </ion-list>
 
-            <ion-item>
-              <ion-label>
-                1.เลือกรายการ
-              </ion-label>
-            </ion-item>
-            <ion-row [class.invalid]="isValid('tax')">
-              <ion-radio-group formControlName="tax" >
-                <ion-item *ngIf="isValid('tax')">
-                  <span class="invalid-msg">กรุณาเลือก</span>
-                </ion-item>
-                <ion-item>
-                  <ion-label>ห้องประชุม</ion-label>
-                  <ion-radio slot="start" value="1"></ion-radio>
-                </ion-item>
-                <ion-item>
-                  <ion-label>ห้องอาหาร</ion-label>
-                  <ion-radio slot="start" value="2"></ion-radio>
-                </ion-item>
-                <ion-item>
-                  <ion-label>ห้องพัก</ion-label>
-                  <ion-radio slot="start" value="3"></ion-radio>
-                </ion-item>
-              </ion-radio-group>
-            </ion-row>
-     
+          <ion-item>
+            <ion-label>
+              1.เลือกรายการ
+            </ion-label>
+          </ion-item>
+          <ion-row [class.invalid]="isValid('tax')">
+            <ion-radio-group formControlName="tax">
+              <ion-item *ngIf="isValid('tax')">
+                <span class="invalid-msg">กรุณาเลือก</span>
+              </ion-item>
+              <ion-item>
+                <ion-label>ห้องประชุม</ion-label>
+                <ion-radio slot="start" value="1"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>ห้องอาหาร</ion-label>
+                <ion-radio slot="start" value="2"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>ห้องพัก</ion-label>
+                <ion-radio slot="start" value="3"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-row>
 
-            <ion-item>
-              <ion-label>
-                2.เลือกได้อย่างใดอย่างหนึ่ง
-              </ion-label>
-            </ion-item>
-            <ion-row [class.invalid]="isValid('tax2')">
-              <ion-radio-group formControlName="tax2" >
-                <ion-item *ngIf="isValid('tax2')">
-                  <span class="invalid-msg">กรุณาเลือก</span>
-                </ion-item>
-                <ion-item>
-                  <ion-label>Cord</ion-label>
-                  <ion-radio slot="start" value="1"></ion-radio>
-                </ion-item>
-                <ion-item>
-                  <ion-label>Duesenberg</ion-label>
-                  <ion-radio slot="start" value="2"></ion-radio>
-                </ion-item>
-              </ion-radio-group>
-            </ion-row>
+
+          <ion-item>
+            <ion-label>
+              2.เลือกได้อย่างใดอย่างหนึ่ง
+            </ion-label>
+          </ion-item>
+          <ion-row [class.invalid]="isValid('tax2')">
+            <ion-radio-group formControlName="tax2">
+              <ion-item *ngIf="isValid('tax2')">
+                <span class="invalid-msg">กรุณาเลือก</span>
+              </ion-item>
+              <ion-item>
+                <ion-label>Cord</ion-label>
+                <ion-radio slot="start" value="1"></ion-radio>
+              </ion-item>
+              <ion-item>
+                <ion-label>Duesenberg</ion-label>
+                <ion-radio slot="start" value="2"></ion-radio>
+              </ion-item>
+            </ion-radio-group>
+          </ion-row>
+
           <ion-item>
             <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
             <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
@@ -181,7 +221,7 @@
       <div class="ion-padding">
         <ion-searchbar></ion-searchbar>
       </div>
-
+      <!-- 
       <ion-row>
         <ion-col size="6">
           <ion-item lines="none">
@@ -195,12 +235,12 @@
         <ion-col size="6">
           <ion-item lines="none">
             <ion-col size="4">
-              <ion-label>เงินสำรองจ่าย (บาท)</ion-label>
+              <ion-label>เงินสำรองจ่าย</ion-label>
             </ion-col>
             <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
           </ion-item>
         </ion-col>
-      </ion-row>
+      </ion-row> -->
 
       <ion-row>
         <ion-col size="6">
