--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -251,15 +251,15 @@
         </ion-list>
       </form>
 
-      <h1>demo modal</h1>
-      <h4> import "(namePage).module" in app.module </h4>
+      <!-- <h1>demo modal</h1>
+      <h4> import "(namePage).module" in app.module </h4> -->
       <ion-button (click)="presentModal()">demo modal</ion-button>
 
     </ng-container>
     <ng-container *ngSwitchCase="'element'">
 
 
-      <div class="ion-padding">
+      <!-- <div class="ion-padding">
         <ion-searchbar></ion-searchbar>
       </div>
 
@@ -338,8 +338,8 @@
           <ion-label>Checkbox3</ion-label>
           <ion-checkbox slot="start" value=""></ion-checkbox>
         </ion-item>
-      </ion-list>
-
+      </ion-list> -->
+      <div class="ion-padding">
       <ion-card>
         <ion-card-header>
           <ion-row class="ion-text-center">
@@ -449,7 +449,7 @@
         </table>
       </div>
 
-      <ion-row>
+      <!-- <ion-row>
         <ion-col size="9"></ion-col>
         <ion-col size="1">
           <ion-button expand="block" color="primary" type="">บันทึก</ion-button>
@@ -460,10 +460,11 @@
         <ion-col size="1">
           <ion-button expand="block" color="warning" type="">แก้ไข</ion-button>
         </ion-col>
-      </ion-row>
-
+      </ion-row> -->
+      </div>
     </ng-container>
   </ng-container>
+
 </ion-content>
 
 <ion-footer>
