--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -227,7 +227,7 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col [class.invalid]="isValid('tax')">
+            <ion-col [class.invalid]="isValid('tax2')">
               <ion-radio-group formControlName="tax2">
                 <ion-item *ngIf="isValid('tax2')">
                   <span class="invalid-msg">กรุณาเลือก</span>
