--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
     <ion-item lines="none">
-      <ion-button size="default" slot="end" expand="block" type="submit">
+      <ion-button (click)="register()" size="default" slot="end" expand="block">
         <ion-icon name="add-circle-outline"></ion-icon>
         ลงทะเบียน
       </ion-button>
@@ -61,6 +61,6 @@
       </ion-card>
     </div>
     
-    <ion-button (click)="register()">ลงทะเบียน</ion-button>
+    <!-- <ion-button (click)="register()">ลงทะเบียน</ion-button> -->
   </form>
 </ion-content>
